--- a/Kconfig
+++ b/Kconfig
@@ -1,6 +1,7 @@
 config NRF5_POWER_MGMT_EXAMPLE
 	bool
 	default y
+	select HAS_STATE_LOW_POWER_1
 	select HAS_STATE_LOW_POWER_2
 	select HAS_STATE_LOW_POWER_3
 	help
