--- a/prj.conf
+++ b/prj.conf
@@ -15,10 +15,10 @@ CONFIG_TICKLESS_IDLE=y
 CONFIG_BT=n
 CONFIG_BT_CTLR=n
 
-CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
+CONFIG_SERIAL=n
+CONFIG_CONSOLE=n
+CONFIG_USE_SEGGER_RTT=n
+CONFIG_RTT_CONSOLE=n
 CONFIG_UART_CONSOLE=n
 
 CONFIG_USB=n
@@ -29,9 +29,10 @@ CONFIG_UART_INTERRUPT_DRIVEN=n
 CONFIG_UART_LINE_CTRL=n
 CONFIG_UART_0_NRF_UART=n
 
-CONFIG_SYS_LOG=y
-CONFIG_LOG=y
-CONFIG_LOG_PRINTK=y
+CONFIG_SYS_LOG=n
+CONFIG_LOG=n
+CONFIG_LOG_PRINTK=n
+CONFIG_LOG_PROCESS_THREAD=n
 
 CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
